--- a/PackageUniverse.Web/Components/Pages/Weather.razor
+++ b/PackageUniverse.Web/Components/Pages/Weather.razor
@@ -1,5 +1,5 @@
 ﻿@page "/weather"
-@attribute [StreamRendering()]
+@attribute [StreamRendering]
 @attribute [OutputCache(Duration = 5)]
 
 @inject WeatherApiClient WeatherApi
